# discord-dynamic-status-hyprland

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: constants.rs  logger.rs  main.rs  rules.rs
src/config/: config.rs  default-config.json  mod.rs
src/discord/: rpc.rs
src/hyprland/: events.rs
